[package]
name = "cashaddr"
version = "0.1.1"
edition = "2021"
authors = ["pezcore"]
description = "Cashaddr codec library"
keywords = ["bch", "bitcoin-cash", "cashaddr", "codec"]
license = "MIT"
repository = "https://gitlab.com/pezcore/cashaddr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
hex = "0.4.3"
