[package]
name = "cashaddr"
version = "0.1.3"
edition = "2021"
authors = ["pezcore"]
description = "Cashaddr codec library"
keywords = ["bch", "bitcoin-cash", "cashaddr", "codec"]
license = "MIT"
repository = "https://gitlab.com/pezcore/cashaddr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = { version = "0.4.0", optional = true, features = ["check"] }

[features]
convert = ["bs58"]

[dev-dependencies]
hex-literal = "0.3.4"
hex = "0.4.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
